# SealSlicer

./: .gitignore  Cargo.toml  README.md  TODO.md  ZenGoblin1.stl  build.rs  example.stl  side_cube.stl  sphere.stl
config/settings/: default_settings.toml  user_settings.toml
resources/shaders/: pbr.frag  vertex_shader.glsl
shader/: vertex_shader.glsl
shaders/: fragment_shader.glsl  pbr_fragment_shader.glsl  pbr_vertex_shader.glsl  slicer_debug_shader.glsl  slicer_shader.glsl  vertex_shader.glsl
slints/: object_list_item.slint  scene.slint  styles.slint
src/: action.rs  action_manager.rs  body.rs  camera.rs  cpu_slicer.rs  file_manager.rs  gpu_slicer.rs  main.rs  material.rs  mesh.rs  mesh_data.rs  mesh_island_analyzer.rs  mesh_renderer.rs  printer.rs  resin_slicer.rs  settings.rs  shader.wgsl  slicer.rs  stl_processor.rs  texture.rs
src/slints/: renderer_visualizations_bar.slint  scene.slint  styles.slint
test_stls/: flat_overhang_4_points.stl  pointed_overhang_1_point.stl  pointed_overhang_2_points.stl  with_holes.stl
